# sifli-hal

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build-ftab.yml  build-hal.yml  build.yml
examples/sf32lb52x/: Cargo.toml  memory.x
examples/sf32lb52x/.cargo/: config.toml
scripts/: c_array_to_pinmux_yaml.py
sifli-flash-table/: Cargo.toml  README.md
sifli-flash-table/src/: lib.rs  main.rs  ptab.rs
sifli-flash-table/src/ftab/: mod.rs  structure.rs
sifli-hal/: Cargo.toml  README.md  build.rs  build_serde.rs
sifli-hal/data/: README.md
sifli-hal/data/sf32lb52x/: HPSYS_RCC.yaml  interrupts.yaml  peripherals.yaml  pinmux.yaml
sifli-hal/src/: chip.rs  fmt.rs  gpio.rs  lib.rs  rcc.rs  time.rs  time_driver.rs  timer.rs
sifli-hal/src/pmu/: dvfs.rs
sifli-hal/src/rcc/: clock.rs  clock_configure.rs  mod.rs
sifli-hal/src/usart/: buffered.rs  mod.rs
src/: chip.rs
